--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "@google/genai": "^1.30.0",
-    "react": "^19.2.0",
+    "docx": "^9.5.1",
     "lucide-react": "^0.555.0",
+    "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-markdown": "^10.1.0",
-    "remark-math": "6.0.0",
-    "rehype-katex": "7.0.0"
+    "rehype-katex": "7.0.0",
+    "remark-math": "6.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
